objects/TM_Service_Rating__c/TM_Service_Rating__c.object-meta.xml
<CustomObject>
    <label>T&amp;M Service Rating</label>
    <nameField>
        <displayFormat>R-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>T&amp;M Service Rating</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>