objects/TM_Service_Rating__c/fields/Customer_Review__c.field-meta.xml
<CustomField>
    <fullName>Customer_Review__c</fullName>
    <label>Customer Review</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>