objects/TM_Service_Rating__c/fields/TM__c.field-meta.xml
<CustomField>
    <fullName>TM__c</fullName>
    <label>T&amp;M</label>
    <referenceTo>TM__c</referenceTo>
    <relationshipLabel>T&amp;M Service Rating</relationshipLabel>
    <relationshipName>TM_Service_Rating</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>